[package]
name = "libfdk-aac-sys"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Raw FFI bindings to Fraunhofer FDK AAC v2.0.3"
links = "fdk-aac"

[features]
default = []
# Use system-installed libfdk-aac instead of vendored build
system-libfdk-aac = []

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
pkg-config = "0.3.33"
